[gd_scene load_steps=7 format=3 uid="uid://jksi2kr0hj6l"]

[ext_resource type="Script" path="res://Main.gd" id="1_fx5g6"]
[ext_resource type="Texture2D" uid="uid://ny6rvsscmx7m" path="res://icon.svg" id="1_yqomf"]
[ext_resource type="Script" path="res://Platform.gd" id="2_pefo5"]
[ext_resource type="Script" path="res://Player.gd" id="3_5xojv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_423is"]
radius = 70.5306

[sub_resource type="CircleShape2D" id="CircleShape2D_3tcdm"]
radius = 103.238

[node name="Main" type="Node2D"]
script = ExtResource("1_fx5g6")

[node name="LogPlatform" type="Sprite2D" parent="."]
position = Vector2(472, 637)
scale = Vector2(0.865234, 2.21875)
texture = ExtResource("1_yqomf")
script = ExtResource("2_pefo5")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="LogPlatform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LogPlatform/Area2D"]
shape = SubResource("CircleShape2D_423is")

[node name="Timer" type="Timer" parent="LogPlatform"]
wait_time = 5.0
one_shot = true

[node name="PadPlatform" type="Sprite2D" parent="."]
position = Vector2(227, 677)
scale = Vector2(1.27148, 1.10156)
texture = ExtResource("1_yqomf")
script = ExtResource("2_pefo5")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="PadPlatform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PadPlatform/Area2D"]
shape = SubResource("CircleShape2D_423is")

[node name="Timer" type="Timer" parent="PadPlatform"]
wait_time = 3.5
one_shot = true

[node name="TwigPlatform" type="Sprite2D" parent="."]
position = Vector2(213, 491)
scale = Vector2(1.77734, 0.703125)
texture = ExtResource("1_yqomf")
script = ExtResource("2_pefo5")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="TwigPlatform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TwigPlatform/Area2D"]
shape = SubResource("CircleShape2D_423is")

[node name="Timer" type="Timer" parent="TwigPlatform"]
wait_time = 2.0
one_shot = true

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(494, 1039)
script = ExtResource("3_5xojv")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_3tcdm")

[node name="Body" type="Sprite2D" parent="Player"]
position = Vector2(1.00002, 7.62939e-06)
scale = Vector2(1.41406, 1.45312)
texture = ExtResource("1_yqomf")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
